// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGroup - JSX label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c7 {
  color: #C1C6CC;
}

.c4 .c7 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      <div
        className=""
      >
        Questions
      </div>
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          what?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          who?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c7 {
  color: #C1C6CC;
}

.c4 .c7 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      Questions
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          what?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          who?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - labelProps & labelStyles 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 1.5625rem;
  font-weight: 600;
  line-height: 2.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c7 {
  color: #C1C6CC;
}

.c4 .c7 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="xxlarge"
      fontWeight="semiBold"
      style={
        Object {
          "color": "rebeccapurple",
        }
      }
    >
      Questions
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          what?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          who?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup 1`] = `
.c1 {
  list-style-type: none;
}

.c3 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c2 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 button,
.c2 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c2:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c2:hover .c5 {
  color: #C1C6CC;
}

.c2 .c5 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <ul
    className="c1"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c2"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4"
        >
          who!
        </div>
      </button>
    </li>
  </ul>
</li>
`;
